{{$NEXT}}

3.0.2  2021-01-28T18:15:26-06:00
    - add new multi sub 'wrap-text'
      + provides text wrapping for max line width
        for a PostScript or PDF font at
        a desired font size
      + input is a text string or a list of
        words
      + added an 'AFM-font' class to wrap a font and
        font size along with convenience 
        methods and attributes
      + added tests for the AFM-font class
      + added a rudimentary test for the two subs
    - add a multi sub 'wrap-paragraph' that
      takes a text string in addition to a
      list of words
    - added new classes for future use:
      + class BBox
      +class Line
      +class Para
    - miscellanous doc and formatting updates

3.0.1  2021-01-15T12:45:02-06:00
    - update copyright year

3.0.0  2021-01-15T12:41:49-06:00
    - bumped api to 3
    - correct edition number of Perl Cookbook referenced
    - removed two deprecated routines:
      + 'strip-comment' with optional second arg as comment char
        a non-standard char must now be chosen with the :mark arg
      + 'write-paragraph' with write to file handle
    - sub 'write-paragraph' is DEPRECATED (and error-prone);
        please use new sub 'wrap-paragraph' instead
    - added new sub 'wrap-paragraph' to replace
        deprecated sub 'write-paragraph'
    - added new options to new sub 'wrap-paragraph'

2.2.1  2020-10-16T19:22:42-05:00
    - add new routine `list2text`
    - add tests for new routine
    - remove travis file and change to Github workflow CI test
    - add App:Mi6 support
    - correct and improve README (now in Pod inside the main module,
      extracted and converted to `Markdown by App::Mi6`)

2.1.1  2020-04-06T11:00-05:00
    - add test for required failure for trying to trim a non-string
    - update for travis.com testing

2.1.0  2020-02-12
    - remove the sub strip-comment check and fail lines with only the
      comment char at the beginning of the line and no other content