@@ -33,8 +33,8 @@
     "CPAN5"
   ],
   "test-depends": [
-      "App::Prove6",
-      "Test::META"
+    "App::Prove6",
+    "Test::META"
   ],
   "version": "3.0.2"
 }
